src/objects/ssv4__OrgAction__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Copy__c</fullName>
        <formula>HYPERLINK(&quot;javascript: prompt(&apos;&quot;+$Label.ssv4__MSG_sIdCopyLink+&quot;&apos;, &apos;&quot;+ssv4__sId__c+&quot;&apos;);void(0);&quot;, IF(ssv4__sId__c!=null,  IMAGE(&apos;/img/icon/questions24.png&apos;, $Label.ssv4__CopyLink, 24, 24),&apos;&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ssv4__IP__c</fullName>
        <label>IP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__InfoLink__c</fullName>
        <formula>HYPERLINK(  SUBSTITUTE($Setup.ssv4__Config__c.ssv4__ipInfoLink__c, &apos;{ip}&apos;, ssv4__IP__c), IF(ssv4__IP__c!=null,  IMAGE(&apos;/img/icon/campaigns24.png&apos;, $Label.ssv4__InfoLink, 24, 24),&apos;&apos;),&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__OrgSrc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Org</label>
        <referenceTo>ssv4__OrgSrc__c</referenceTo>
        <relationshipLabel>Org Actions</relationshipLabel>
        <relationshipName>OrgActions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssv4__sId__c</fullName>
        <inlineHelpText>Session Id</inlineHelpText>
        <label>sId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Action</label>
    <listViews>
        <fullName>ssv4__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OA-{YYYY}.{MM}.{DD}-{0000}</displayFormat>
        <label>Org Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>